Carousel setup complete, styled and function. TODO: make all slides same "height" so the layout stops shifting

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -3,34 +3,17 @@
   --white-100: whitesmoke;
   --black-000: #100306;
   --black-100: #1c1118;
+  --black-200: #3b3f3f;
   --primary-000: #930000;
   --primary-100: #720000;
   --accent-000: #284c52;
+  --accent-100: #026778;
 }
 
-.flex {
-  display: flex;
-}
-
-.outline {
-  background: var(--black-000);
-  padding: 1em;
-
-  border-radius: 5px;
-  border: 1px solid var(--accent-000);
-  box-shadow: 0px 0px 13px var(--accent-000);
-  -moz-box-shadow: 0 0 13px var(--accent-000);
-  -webkit-box-shadow: 0 0 13px var(--accent-000);
-  box-shadow: 0px 0px 13px var(--accent-000);
-  filter: progid:DXImageTransform.Microsoft.Glow(Color=var(--accent-000),Strength=13);
-  animation: glow-pulse 1s infinite alternate;
-}
-
-@media (max-width: 1198px) {
-  .outline {
-    width: calc(100vw - (100vw * 0.05));
-    padding: 1em;
-  }
+body {
+  background: var(--black-100);
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
 }
 
 footer {
@@ -38,13 +21,6 @@ footer {
   color: var(--white-000);
   margin: auto;
   padding: 20px 0;
-}
-
-body {
-  font-family: "Montserrat", sans-serif;
-  font-size: 14px;
-  background: var(--black-100);
-  margin: 10px;
 }
 
 h1,
@@ -82,6 +58,13 @@ a:hover {
   }
 }
 
+button {
+  font-family: "Montserrat", sans-serif;
+  background: var(--accent-100);
+  border: unset;
+  color: var(--white-000);
+}
+
 .mobile {
   width: 100%;
 }
@@ -93,7 +76,7 @@ a:hover {
 }
 
 .note {
-  color: var(--accent-000);
+  color: var(--accent-100);
 }
 
 .icon {
@@ -109,6 +92,24 @@ a .icon:hover {
   transform: scale(1.5);
 }
 
+.flex {
+  display: flex;
+}
+
+.outline {
+  background: var(--black-000);
+  padding: 1em;
+
+  border-radius: 5px;
+  border: 1px solid var(--accent-000);
+  box-shadow: 0px 0px 13px var(--accent-000);
+  -moz-box-shadow: 0 0 13px var(--accent-000);
+  -webkit-box-shadow: 0 0 13px var(--accent-000);
+  box-shadow: 0px 0px 13px var(--accent-000);
+  filter: progid:DXImageTransform.Microsoft.Glow(Color=var(--accent-000),Strength=13);
+  animation: glow-pulse 1s infinite alternate;
+}
+
 .introduction {
   display: flex;
   flex-direction: column;
@@ -121,9 +122,6 @@ a .icon:hover {
   display: flex;
   gap: 10px;
   justify-content: center;
-  list-style: none;
-  margin: 0;
-  padding: 0;
   margin: 20px 0;
 }
 
@@ -185,14 +183,131 @@ a .icon:hover {
   margin: auto;
 }
 
-.cv ul {
-  list-style: none;
-  padding: unset;
-}
-
 .cv li {
   margin: 10px 0;
 }
+
+ul {
+  padding: unset;
+  margin: unset;
+  list-style: none;
+}
+
+.card {
+  color: var(--primary-000);
+  background: unset;
+  background-color: var(--black-000);
+  padding: 0.75em;
+  text-align: center;
+  border: 1px solid var(--primary-100);
+  z-index: 995;
+}
+
+.card-title {
+  font-size: 1.75em;
+  margin: 0.5em;
+}
+
+.card-description {
+  font-weight: bold;
+}
+
+.card-footer {
+  color: var(--accent-100);
+  font-weight: bold;
+  font-size: 1.25em;
+}
+
+/* START carousel */
+/* TODO: make slides 1:1 on mobile only, match buttns to w3 with teal backgroung */
+.carousel {
+  margin: auto;
+}
+
+.carousel .images {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: fade 2s, slide-bottom 0.75s;
+}
+
+.carousel .images img {
+  height: 100%;
+  width: 100%;
+}
+
+.carousel button {
+  background: unset;
+}
+
+.slides {
+  position: relative;
+}
+
+.slide {
+  margin: auto;
+  display: none;
+}
+
+.slide-1 .images img,
+.slide-3 .images img {
+  width: 50%;
+}
+
+.slide-3 .images {
+  width: 100%;
+}
+
+.slides .prev,
+.slides .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 15px;
+  color: var(--white-000);
+  font-weight: bold;
+  font-size: 2em;
+  transition: 0.6s ease;
+  user-select: none;
+  z-index: 999;
+}
+.next {
+  right: 0;
+}
+.prev:hover,
+.next:hover {
+  background-color: rgba(2, 103, 120, 0.8);
+}
+
+@media (min-width: 769px) {
+  .carousel .slide {
+    position: relative;
+  }
+
+  .carousel .slide .card {
+    position: absolute;
+    width: 80%;
+    top: 60%;
+    left: 10%;
+  }
+
+  .carousel .images {
+    flex-direction: row;
+  }
+
+  .carousel .images img {
+    max-height: 90vh;
+    object-fit: contain;
+  }
+
+  .prev,
+  .next {
+    padding: 1.5em;
+  }
+}
+/* END carousel */
 
 @keyframes glow-pulse {
   0% {
@@ -204,4 +319,47 @@ a .icon:hover {
   100% {
     box-shadow: 0 0 3px 3px rgba(40, 76, 82, 0.5);
   }
+}
+
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes left-to-right {
+  from {
+    transform: translateX(-50%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes right-to-left {
+  from {
+    transform: translateX(50%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes slide-bottom {
+  from {
+    transform: translateY(50%);
+  }
+  to {
+    transform: translateY(0%);
+  }
+}
+
+.slide-left {
+  animation: left-to-right 0.75s;
+}
+.slide-right {
+  animation: right-to-left 0.75s;
 }
